# lyra

./: .bazelrc  .gitignore  Dockerfile  README.md  WORKSPACE  android_build_benchmark.sh  android_build_decode.sh  android_build_encode.sh  arm_build_benchmark.sh
android_liblog_dummy/: Android.mk  CMakeLists.txt  build.sh  log.cpp
android_liblog_dummy/include/: log.h
c_lib/bazel-bin/lyra/c_library/: libclib_dec.a-2.params  libclib_dec.pic.a-2.params  libclib_enc.a-2.params  libclib_enc.pic.a-2.params
c_lib/bazel-bin/lyra/c_library/_objs/clib_dec/: clib_dec.d  clib_dec.pic.d
c_lib/bazel-bin/lyra/c_library/_objs/clib_enc/: clib_enc.d  clib_enc.pic.d
lyra/: BUILD
lyra/c_library/: BUILD  c_dec.cc  c_dec.h  c_enc.cc  c_enc.h  clib.cpp  clib_dec.cc  clib_dec.h  clib_enc.cc  clib_enc.h
lyra/cli_example/: BUILD
patches/: change_XNNPACK.patch  multichannel-audio-tols_fix.patch  tensorflow_fix.patch
